# gi-talker

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: tts-bot-plan.md
src/gi_talker/: __init__.py  __main__.py  bot.py  config.py  logging_setup.py  preferences.py  voice.py
src/gi_talker/tts/: __init__.py  engine.py
