[project]
name = "gi-talker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "discord-py>=2.6.4",
    "kokoro-onnx>=0.4.9",
    "numpy>=2.3.4",
    "onnxruntime>=1.23.2",
    "pynacl>=1.6.0",
    "python-dotenv>=1.1.1",
    "soundfile>=0.13.1",
]

[tool.uv]
package = true

[tool.uv.sources]
"gi-talker" = { path = "src" }
